 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 Beta 4
============

* [cdunde/DanielPharos]: Added two new function methods to Subdivide selected faces
          - into 3 and 4 new triangles each.

* [cdunde]: Setup linear center handle selected vertexes edge extrusion function.

* [DanielPharos/cdunde]: Changed to keep Texture Position dialog open and update dynamically.

* [cdunde]: Separated editors background image dialogs and setup to save all of their settings.

* [DanielPharos]: Another bunch of hugh image fixes: everything should work again! The DevIL
          - implementation currently doesn't support loading palette files, and saving them
          - isn't supported by either. But the rest works perfectly! Also, TGA files now also
          - use DevIL and FreeImage.

* [DanielPharos]: BMP and PCX files are now also using DevIL and FreeImage to load and save.

* [cdunde/DanielPharos]: Added new function "Merge Vertexes" to the "Vertex Commands" menu.
          - Setup to allow merging of a base vertex and other multiple selected vertexes.

* [DanielPharos]: Any supported picture can now be used for a view's background. Also added two options,
          - which allow you to manipulate the way the picture appears a bit more.

* [cdunde]: Added "Make hollow" option to dialog & end faces for Pyramid and Cylinder Quick Object Makers
          - to allow extrusion and vertex manipulation to create shapes such as arms and leg parts.

* [cdunde/DanielPharos]: Fixed Linear Handle for selected faces and frames to draw face vertexes locations
          - properly for animation movement.
